# wd-notability-public

./: .env.example  .gitignore  AGENTS.md  Procfile  README.md  entitydata.prof  main.py  pyproject.toml  scratchpad.md
docs/: toolforge-playbook.md
scripts/: build_namespace_cache.py  build_osm_cache.py  build_property_cache.py  build_sdc_cache.py  build_wikisub_cache.py  reset_main_cache.py  toolforge-entrypoint.sh  toolforge-init-jobs.sh  toolforge-launch-jobs.sh  toolforge-stop-jobs.sh  tunnel.sh  update_wikisub_cache.py
server/: app.py
tests/: test_build_namespace_cache.py  test_build_osm_cache.py  test_build_property_cache.py  test_build_sdc_cache.py  test_build_wikisub_cache.py  test_cache_stats_endpoint.py  test_content_outlinks.py  test_entitydata_worker.py  test_env_loader.py  test_evaluate_errors.py  test_evaluate_many.py  test_evaluation_cache.py  test_external_usage_worker.py  test_foreground_evaluation.py  test_http_client.py  test_identifiers_detector.py  test_inlinks_cache.py  test_inlinks_detector.py  test_inlinks_source.py  test_inlinks_worker.py  test_launcher_manifest.py  test_lookup_cache.py  test_models.py  test_observability.py  test_osm_detector.py  test_osm_source.py  test_sdc_source.py  test_sdc_usage_detector.py  test_server_badge_payload.py  test_server_startup.py  test_server_subscribe.py  test_sitelinks_detector.py  test_wiki_subscribers_detector.py  test_wiki_usage_source.py  test_wikidata_api.py  test_wikisub_worker.py
wd_notability/: __init__.py  api_backoff.py  async_limiters.py  cache_observability.py  creation_cache.py  events.py  (+23 more)
(+76 files in other folders)
