[project]
name = "wd-notability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiolimiter>=1.2.1",
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "markdown-it-py>=4.0.0",
    "pydantic>=2.13.4",
    "pymysql>=1.1.1",
    "tenacity>=9.1.4",
    "tqdm>=4.68.2",
    "uvicorn>=0.49.0",
]
[tool.setuptools.packages.find]

include = ["wd_notability*","server*"]
